<resources>
    <string name="app_name">A &amp; M Trade Show Management</string>
    <string name="nav_drawer_header_1">Ashton &amp; Mansion</string>
    <string name="nav_drawer_header_2">Trade Show Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_app_settings_string">App Settings</string>
    <string name="action_create_new_booth_string">Create New Booth</string>
    <string name="action_create_new_show_string">Create New Show</string>
    <string name="application_settings_string">Application Settings</string>
    <string name="title_activity_create_show">Create New Trade Show</string>
    <string name="title_activity_edit_show">Edit Trade Show</string>
    <string name="title_activity_edit_booth">Edit Single Booth</string>
    <string name="title_activity_filter_booths">Filter Booth List</string>
    <string name="title_activity_make_reservation">Make A Reservation</string>
    <string name="title_activity_create_booth">Create New Booth</string>
    <string name="title_activity_booth_reservation">Booth Reservation</string>
    <string name="nav_drawer_home_header">Home</string>
    <string name="nav_drawer_setup_header">Setup</string>
    <string name="nav_drawer_reservations_header">Reservations</string>
    <string name="nav_drawer_sales_header">Sales</string>
    <string name="nav_drawer_settings_header">Settings</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_drawer_show_setup_text">Show Setup</string>
    <string name="nav_drawer_config_booths_text">Configure Booths</string>
    <string name="nav_drawer_reports_queries_text">Reports / Queries</string>
    <string name="nav_drawer_make_reservation_text">Review Booths</string>
    <string name="nav_drawer_email_confirmations_text">Email Confirmations</string>
    <string name="nav_drawer_advertising_sales_text">Advertising Sales</string>
    <string name="nav_drawer_general_tix_sales_text">General Ticket Sales</string>
    <string name="nav_drawer_special_events_sales_text">Special Event Sales</string>
    <string name="nav_drawer_merchandise_sales_text">Merchandise Sales</string>
    <string name="nav_drawer_app_settings_text">Application Settings</string>
    <string name="clover_connectivity_string">Clover connectivity available: </string>
    <string name="clover_connectivity_available_string">Online</string>
    <string name="clover_connectivity_unavailable_string">Off-line</string>
    <string name="email_reservations_confirmations_string">Email Reservation Confirmations</string>
    <string name="search_reservations_string">Search Reservations... </string>
    <string name="trade_shows_string">Trade Shows</string>
    <string name="show_name_for_user_string">%1$s (%2$s - %3$s)</string>
    <string name="loading_trade_shows_text">Loading Trade Shows. . .</string>
    <string name="booth_config_show_selection_string">Booth Configuration - Show Selection</string>
    <string name="trade_shows_edit_btn_string">Edit</string>
    <string name="edit_show_header_string">%1$s (%2$s - %3$s)</string>
    <string name="add_show_string">Add Trade Show</string>
    <string name="add_show_name_string">Name:</string>
    <string name="add_show_name_hint">[Name]</string>
    <string name="edit_show_name_string">Name:</string>
    <string name="edit_show_name_hint">[Name]</string>
    <string name="add_show_date_string">Date:</string>
    <string name="add_show_date_hint">[Date]</string>
    <string name="edit_show_date_string">Date:</string>
    <string name="edit_show_date_hint">[Date]</string>
    <string name="add_show_location_string">Location:</string>
    <string name="add_show_location_hint">[Location]</string>
    <string name="edit_show_location_string">Location:</string>
    <string name="edit_show_location_hint">[Location]</string>
    <string name="add_show_notes_string">Notes:</string>
    <string name="add_show_notes_hint">[Notes]</string>
    <string name="edit_show_notes_string">Notes:</string>
    <string name="edit_show_notes_hint">[Notes]</string>
    <string name="delete_show_btn_string">Delete Show</string>
    <string name="cancel_show_add_string">Cancel New Show</string>
    <string name="cancel_show_edit_string">Cancel</string>
    <string name="add_new_show_btn_string">Add New Show</string>
    <string name="save_show_changes_btn_string">Save Changes</string>
    <string name="no_trade_shows_available_string">Currently no trade shows have been created. \n Please create one.</string>
    <string name="edit_show_show_deleted_toast_string">Trade Show has been deleted</string>
    <string name="create_show_show_added_toast_string">Trade Show created</string>
    <string name="configure_booth_show_selection_string">Select Show</string>
    <string name="configure_booths_string">Configure Booths</string>
    <string name="configure_show_booths_number_header">No.</string>
    <string name="configure_show_booths_size_header">Size</string>
    <string name="configure_show_booths_area_header">Area</string>
    <string name="configure_show_booths_type_header">Type</string>
    <string name="configure_show_booths_customer_header">Customer</string>
    <string name="configure_show_booths_price_header">Price</string>
    <string name="configure_show_booths_filter_btn_text">Filter Booths</string>
    <string name="configure_show_booths_edit_booth_btn_text">Edit</string>
    <string name="booth_name_string">Booth #%1$s (%2$s, %3$s, %4$s)</string>
    <string name="create_booth_name_prompt">Booth Name:</string>
    <string name="create_booth_number_prompt">Booth No.:</string>
    <string name="create_booth_price_prompt">Price:</string>
    <string name="create_booth_size_prompt">Size:</string>
    <string name="create_booth_area_prompt">Area:</string>
    <string name="create_booth_type_prompt">Booth Type:</string>
    <string name="create_booth_name_hint">[Booth Name]</string>
    <string name="create_booth_number_hint">[Booth #]</string>
    <string name="create_booth_price_hint">[Price]</string>
    <string name="create_booth_size_hint">[Size]</string>
    <string name="create_booth_area_hint">[Area]</string>
    <string name="create_booth_type_hint">[Booth Type]</string>
    <string name="create_booth_cancel_btn_text">Cancel</string>
    <string name="create_booth_finish_booth_creation_str">Create Booth</string>
    <string name="create_booth_progress_dialog_text">Creating Booth. . . </string>
    <string name="edit_booth_header_string">%1$s</string>
    <string name="edit_booth_number_prompt">Booth No.:</string>
    <string name="edit_booth_price_prompt">Price:</string>
    <string name="edit_booth_size_prompt">Size:</string>
    <string name="edit_booth_area_prompt">Area:</string>
    <string name="edit_booth_type_prompt">Booth Type:</string>
    <string name="edit_booth_number_hint">[Booth Number]</string>
    <string name="edit_booth_price_hint">[Price]</string>
    <string name="edit_booth_size_hint">[Size]</string>
    <string name="edit_booth_area_hint">[Area]</string>
    <string name="edit_booth_type_hint">[Booth Type]</string>
    <string name="delete_booth_btn_text">Delete Booth</string>
    <string name="edit_booth_cancel_btn_text">Cancel</string>
    <string name="edit_booth_save_changes_text">Save Changes</string>
    <string name="edit_booth_set_available_btn_text">Set Booth to Available</string>
    <string name="edit_booth_updating_booth_msg">Updating Booth. . .</string>
    <string name="booth_successfully_made_available_msg">Booth is now set to available. . .</string>
    <string name="booth_available_refund_entire_order_opt">Refund entire order</string>
    <string name="booth_available_swap_to_generic_and_reopen">Remove Booth, Add Generic, Re-open Order</string>
    <string name="booth_available_delete_order_and_make_available">Delete Order and Make Available</string>
    <string name="booth_deleted_successfully_msg">Booth Deleted. . .</string>
    <string name="booth_filter_page_header">Booth Filters</string>
    <string name="booth_filters_number_prompt">Booth No.:</string>
    <string name="booth_filters_price_prompt">Price:</string>
    <string name="booth_filters_size_prompt">Size:</string>
    <string name="booth_filters_area_prompt">Area:</string>
    <string name="booth_filters_categorytype_prompt">Category:</string>
    <string name="booth_filters_apply_filters_text">Apply Filters</string>
    <string name="booth_filters_clear_filter_btn_text">Clear</string>
    <string name="booth_filters_boothnumber_hint">[Booth No.]</string>
    <string name="booth_filters_min_price_hint">[Min Price]</string>
    <string name="booth_filters_max_price_hint">[Max Price]</string>
    <string name="booth_reservation_show_selection_header_text">Booth Overviews - Select Show</string>
    <string name="select_show_button_text">Select Show</string>
    <string name="select_booth_action_button_text">Select Booth</string>
    <string name="booth_reservation_no_booths_for_show_text">[No Available Booths assigned to Show]</string>
    <string name="booth_configuration_no_booths_message">[No Booths Have Been Assigned To Show]</string>
    <string name="available_booths_header_text">Available Booths</string>
    <string name="customer_search_prompt">Search Existing Customers:</string>
    <string name="manual_customer_entry_prompt">-OR- Enter a customer manually below</string>
    <string name="add_new_customer_chkbox_label">Add New Customer?</string>
    <string name="customer_name_string">Customer Name</string>
    <string name="customer_first_name_hint">[First Name]</string>
    <string name="customer_last_name_hint">[Last Name]</string>
    <string name="customer_address_label">Address</string>
    <string name="customer_address_1_hint">[Address Line 1]</string>
    <string name="customer_address_2_hint">[Address Line 2]</string>
    <string name="customer_address_3_hint">[Address Line 3]</string>
    <string name="customer_city_label">City</string>
    <string name="customer_city_hint">[City]</string>
    <string name="customer_state_label">State</string>
    <string name="customer_zip_label">Zip Code</string>
    <string name="customer_zip_hint">[Zip]</string>
    <string name="customer_email_label">Customer Email</string>
    <string name="customer_email_hint">[Email]</string>
    <string name="customer_phone_label">Customer Phone</string>
    <string name="customer_phone_hint">[Phone]</string>
</resources>