<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_drawer_home_header">
        <menu>
            <item
                android:id="@+id/nav_home_btn"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_home_text" />
        </menu>
    </item>
    <item android:title="@string/nav_drawer_setup_header">
        <menu>
            <item
                android:id="@+id/nav_show_setup_btn"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_show_setup_text" />
            <item
                android:id="@+id/nav_config_booths_btn"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_config_booths_text" />
        </menu>
    </item>
    <item android:title="@string/nav_drawer_reservations_header">
        <menu>
            <item
                android:id="@+id/nav_make_reservation_btn"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_make_reservation_text" />
        </menu>
    </item>
    <item android:title="@string/nav_drawer_settings_header">
        <menu>
            <item
                android:id="@+id/nav_app_settings_btn"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_app_settings_text" />
        </menu>
    </item>
</menu>
