<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:stretchColumns="*"
        tools:context="com.ashtonmansion.tradeshowmanagement.activity.ViewBoothDetail">

        <TableRow android:layout_width="match_parent">

            <TextView
                android:id="@+id/booth_detail_header"
                android:layout_width="match_parent"
                android:layout_span="3"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_48sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_span="3"
                android:text="@string/manual_customer_entry_prompt"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_24sp"
                android:textStyle="italic|bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/add_new_customer_chkbox_label"
                android:textStyle="bold" />

            <CheckBox android:id="@+id/booth_detail_add_new_customer_chkbox" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/customer_name_string"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/br_customer_first_name"
                android:hint="@string/customer_first_name_hint"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/br_customer_last_name"
                android:hint="@string/customer_last_name_hint" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/customer_address_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/customer_address_1_field"
                android:layout_span="2"
                android:hint="@string/customer_address_1_hint"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView android:text="" />

            <EditText
                android:id="@+id/customer_address_2_field"
                android:hint="@string/customer_address_2_hint"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/customer_address_3_field"
                android:hint="@string/customer_address_3_hint"
                android:textAlignment="center" />

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/customer_city_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/customer_address_city_field"
                android:layout_span="2"
                android:hint="@string/customer_city_hint"
                android:textAlignment="center" />

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/customer_state_label"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/customer_address_state_spinner"
                android:entries="@array/state_array_entries" />

            <EditText
                android:id="@+id/customer_address_zip_field"
                android:hint="@string/customer_zip_hint"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/customer_email_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/customer_email_field"
                android:layout_span="2"
                android:hint="@string/customer_email_hint"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/customer_phone_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/customer_phone_field"
                android:layout_span="2"
                android:hint="@string/customer_phone_hint"
                android:inputType="phone"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/make_reservation_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:onClick="finalizeReservation"
                android:src="@android:drawable/ic_menu_send" />
        </TableRow>
    </TableLayout>
</ScrollView>