<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dimen_25dp"
    android:paddingEnd="@dimen/dimen_75dp"
    android:paddingStart="@dimen/dimen_75dp"
    android:paddingTop="@dimen/dimen_25dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ashtonmansion.amtradeshowmanagement.activity.EditShow"
    tools:showIn="@layout/activity_edit_show">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow android:layout_marginBottom="@dimen/dimen_25dp">

            <TextView
                android:id="@+id/edit_show_name_and_id_header"
                android:layout_span="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/edit_show_name_prompt"
                android:text="@string/edit_show_name_string" />

            <EditText
                android:id="@+id/edit_show_name_field"
                android:hint="@string/edit_show_name_hint"
                android:maxLength="50"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/edit_show_date_prompt"
                android:text="@string/edit_show_date_string" />

            <EditText
                android:id="@+id/edit_show_date_field"
                android:hint="@string/edit_show_date_hint"
                android:inputType="date"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/edit_show_location_prompt"
                android:text="@string/edit_show_location_string" />

            <EditText
                android:id="@+id/edit_show_location_field"
                android:hint="@string/edit_show_location_hint"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/edit_show_notes_prompt"
                android:text="@string/edit_show_notes_string" />

            <EditText
                android:id="@+id/edit_show_notes_field"
                android:hint="@string/edit_show_notes_hint"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/delete_show_btn"
                style="@style/standard_button_style_mobile"
                android:onClick="deleteShowAction"
                android:text="@string/delete_show_btn_string" />

            <Button
                android:id="@+id/cancel_edit_show_activity_btn"
                style="@style/standard_button_style_mobile"
                android:onClick="cancelEditShow"
                android:text="@string/cancel_show_edit_string" />

            <Button
                android:id="@+id/save_show_edits_btn"
                style="@style/standard_button_style_mobile"
                android:onClick="saveShowChangesAction"
                android:text="@string/save_show_changes_btn_string" />
        </TableRow>
    </TableLayout>
</LinearLayout>


